--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -144,13 +144,13 @@
             <li><a href="#">Log In</a></li>
         </ul>
         <div class="auth">
-            <button class="get-started">Get Started</button>
+            <button class="get-started" onclick="window.location.href='registration.html'">Get Started</button>
         </div>
     </nav>
     
     <div class="hero">
         <h1>The Future of Sports Career Management</h1>
-        <button class="cta">Join Now</button>
+        <button class="cta" onclick="window.location.href='registration.html'">Join Now</button>
         <p>Connecting Players, Agents, and Clubs in One Place</p>
     </div>
     
@@ -175,3 +175,4 @@
     </footer>
 </body>
 </html>
+
